@@ -25,6 +25,7 @@ Options](#detailed-information-about-all-options) for more information.
 ## Detailed Information About All Options
 
 * [```--loaded```](#-loaded)
+* [`--always-allow-idtoken`](#-always-allow-idtoken)
 * [```--confirm```](#-confirm)
 * [```--list```](#-list)
 * [```--print```](#-print)
@@ -42,6 +43,15 @@ Options](#detailed-information-about-all-options) for more information.
 This option is used without a shortname, because it will not load an account
 configuration. Using this option ```oidc-add``` will print out a list of all
 the account configurations currently loaded in the agent.
+
+### `--always-allow-idtoken`
+`oidc-token` can also be used to request an id token from the agent. On
+default such requests have to be approved by the user, since this is only ment
+as a development tool and other applications should not request id tokens from
+the agent as id tokens are not ment for authorization. If the
+`--always-allow-idtoken` option is specified to `oidc-add` when an account
+configuration is loaded, id token requests for that account do not need
+confirmation by the user.
 
 ### ```--confirm```
 On default every application running as the same user as the agent can obtain an
