@@ -38,6 +38,7 @@ struct oidc_account {
 #define ACCOUNT_MODE_CONFIRM 0x01
 #define ACCOUNT_MODE_NO_WEBSERVER 0x02
 #define ACCOUNT_MODE_NO_SCHEME 0x04
+#define ACCOUNT_MODE_ALWAYSALLOWID 0x08
 
 char*                defineUsableScopes(const struct oidc_account* account);
 struct oidc_account* getAccountFromJSON(const char* json);
