@@ -34,6 +34,7 @@ char*         account_getCodeChallengeMethod(const struct oidc_account* p);
 unsigned char account_getConfirmationRequired(const struct oidc_account* p);
 unsigned char account_getNoWebServer(const struct oidc_account* p);
 unsigned char account_getNoScheme(const struct oidc_account* p);
+unsigned char account_getAlwaysAllowId(const struct oidc_account* p);
 
 void account_setIssuerUrl(struct oidc_account* p, char* issuer_url);
 void account_setClientName(struct oidc_account* p, char* clientname);
@@ -62,6 +63,7 @@ void account_setCodeChallengeMethod(struct oidc_account* p,
 void account_setConfirmationRequired(struct oidc_account* p);
 void account_setNoWebServer(struct oidc_account* p);
 void account_setNoScheme(struct oidc_account* p);
+void account_setAlwaysAllowId(struct oidc_account* p);
 int  account_refreshTokenIsValid(const struct oidc_account* p);
 
 #endif  // ACCOUNT_SETANDGET_H
