@@ -56,11 +56,12 @@ void add_handleAdd(char* account, struct arguments* arguments) {
 
   char* res = NULL;
   if (arguments->lifetime.argProvided) {
-    res = ipc_cryptCommunicate(REQUEST_ADD_LIFETIME, json_p,
-                               arguments->lifetime.lifetime, pw_str,
-                               arguments->confirm);
+    res = ipc_cryptCommunicate(
+        REQUEST_ADD_LIFETIME, json_p, arguments->lifetime.lifetime, pw_str,
+        arguments->confirm, arguments->always_allow_idtoken);
   } else {
-    res = ipc_cryptCommunicate(REQUEST_ADD, json_p, pw_str, arguments->confirm);
+    res = ipc_cryptCommunicate(REQUEST_ADD, json_p, pw_str, arguments->confirm,
+                               arguments->always_allow_idtoken);
   }
   secFree(pw_str);
   secFree(json_p);
