@@ -328,6 +328,10 @@ oidc-agent (3.3.0) UNRELEASED; urgency=medium
   * Add support to request tokens with specific audience.
   * Add wlcg.cloud.cnaf.infn.it
   * Add public client for wlcg.cloud.cnaf.infn.it
-  * Update cJSON library
+  * Update cJSON library.
+  * Add --id-token option to oidc-token to request an id-token from the
+    agent.
+  * Fix some minor bugs.
+  * 
 
- -- Marcus Hardt <hardt@kit.edu>  Fri, 17 Jan 2020 09:24:09 +0200
+ -- Marcus Hardt <hardt@kit.edu>  Wed, 22 Jan 2020 12:29:42 +0200
